infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cauldron
  labels:
    name: cauldron
    part-of: cauldron-seos
